# BPCPP

./: .gitignore  CMakeLists.txt  INPUT_DATA.txt  INPUT_DATA_A.txt  README.md
cmake/: BuildExamples.cmake  CompileFlags.cmake  CreateSymlink.cmake  GroupSources.cmake  LinkStaticLib.cmake  RedirectOutputTo.cmake  StaticLibsCompile.cmake
headers/lib/: includes.h  layer.h  net.h  neuron.h
headers/matplotlib/: matplotlib.h
src/exe/: main.cpp
src/lib/: layer.cpp  net.cpp  neuron.cpp
